testing/testFirst/test1_str/output.txt
input.am:3  error: 'S0:' has already declared in earlier line
 3  | S0: .string "hey"
    | ^~~
input.am:4  error: ' ' empty string initialization
 4  | S1: .string 
    |            ^
input.am:5  error: missing opening " character in 'a"'
 5  | S2: .string a"
    |             ^~
input.am:6  error: extraneous text 'b"' after terminating " character
 6  | S3: .string "a"b"
    |                ^~
input.am:7  error: extraneous text 'b' after terminating " character
 7  | S4: .string "a"b
    |                ^
input.am:8  error: missing terminating " character in '"a'
 8  | S5: .string "a
    |             ^~
input.am:9  warning: '.string' variables may be inaccessible without label
 9  | .string "b"
    | ^~~~~~~
| h | e | l | l | o |   | w | o | r | l | d | ! |   | 1 | 2 | 3 |   |   | b |   |
 S                0      directive       not external   
 S0               17     directive       not external   
